kubernetes/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: encouragemint
  namespace: default
  labels:
    app.kubernetes.io/name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend
    spec:
      containers:
      - name: encouragemint
        image: ryan684/encouragemint:latest
        command:
          - ./start_web.sh
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: encouragemint
          initialDelaySeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: encouragemint
          initialDelaySeconds: 3
        ports:
          - containerPort: 8000
            name: encouragemint
      imagePullSecrets:
        - name: docker-hub-credentials
