kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: encouragemint-backend-deployment
  labels:
    app: encouragemint-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: encouragemint-backend
  template:
    metadata:
      labels:
        app: encouragemint-backend
    spec:
      containers:
      - name: encouragemint-backend
        image: ryan684/encouragemint:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8000
      imagePullSecrets:
        - name: docker_hub_credentials
