kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: encouragemint-ui
  namespace: default
  labels:
    app.kubernetes.io/name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
    spec:
      containers:
        - name: encouragemint
          image: ryan684/encouragemint:latest
          command:
            - ./start_ui.sh
          imagePullPolicy: Always
          stdin: true
          tty: true
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: docker-hub-credentials
