kubernetes/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: encouragemint
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: encouragemint
        image: ryan684/encouragemint:latest
        command:
          - ./start_web.sh
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8000
      imagePullSecrets:
        - name: docker-hub-credentials
