kubernetes/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: encouragemint-worker
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: encouragemint-worker
        image: ryan684/encouragemint:latest
        command:
          - ./start_worker.sh
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8000
      imagePullSecrets:
        - name: docker-hub-credentials
