kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: encouragemint-api-service
  namespace: default
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app.kubernetes.io/name: backend
