kubernetes/broker-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: broker
  name: broker
spec:
  ports:
  - protocol: TCP
    port: 5672
    targetPort: 5672
  selector:
    app: broker
