kubernetes/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
    - port: 3306
  selector:
    app: database
  clusterIP: None
