kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: encouragemint-frontend-service
  namespace: default
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app.kubernetes.io/name: frontend
