kubernetes/rabbitmq-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: broker
  name: broker
spec:
  ports:
  - protocol: TCP
    port: 15672
    targetPort: 15672
  selector:
    app: broker
