kubernetes/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: encouragemint-backend-service
  namespace: default
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: backend
